# a2-videostreaming-via-cdn

./: .gitignore
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/src/loadBalancer/: CMakeLists.txt  balancer.cpp  balancer.h  loadBalancer.cpp  utils.cpp  utils.hpp
cpp/src/miProxy/: CMakeLists.txt  miproxy.cpp  server.cpp  server.h
